began adding element ids

--- a/SpaceHunt Core HTML.html
+++ b/SpaceHunt Core HTML.html
@@ -33,12 +33,29 @@
 // *** current position so I can visit celestial points in the game space.
 -->
 
+
+
 <script src="SpaceCraftMovement.js"></script>
 
 
+<script src="game_config.js"
+
 </head>
 
-<body>
+<!--  start of Game config -->
+<body id = "configOptions"> 
+<form>
+<input id="customTF" type="text"> 
+
+
+</form>
+</body>
+<body id="game">
+
+<!-- end game config -->
+
+
+
 <h1>SpaceHunt</h1>
 <form name=UI>
 STATUS
