loading custom options fixed (kinda)
Loading custom settings will now be displayed. However, I'm not validating input atm because there's some odd bug that I'm working on.

--- a/SpaceHunt Core HTML.html
+++ b/SpaceHunt Core HTML.html
@@ -105,11 +105,11 @@
 <form name=UI>
 STATUS
 <p>Current Location: 
-X <input type=text  id="xVal" size=4 value="10">
-Y <input type=text name=yValue  id="yVal" size=4 value="10">
+X <input type=text  id="xVal" size=4 >
+Y <input type=text  id="yVal" size=4 >
 <p>
-<p>Energy <input type=text name=energy size=4 value="100">
-<p>Supplies <input type=text name=supplies size=4 value="100">%
+<p>Energy <input type=text id="energyVal" size=4 >
+<p>Supplies <input type=text id="suppliesVal" size=4 >%
 <p>
 <hr>
 MAKE A MOVE
