--- a/SpaceHunt Core HTML.html
+++ b/SpaceHunt Core HTML.html
@@ -1,3 +1,18 @@
+<script>
+	var map = new Array[128];
+	for(var i = 0; i < 128; ++i)
+	{
+		map[i] = new Array[128];
+	}
+	for(var i = 0; i < 128; ++i)
+	{
+		for(var j = 0; j < 128; ++j)
+		{
+			map[i][j] = null;
+		}
+	}
+</script>
+
 <html>
 
 <head>
