--- a/SpaceHunt Core HTML.html
+++ b/SpaceHunt Core HTML.html
@@ -102,23 +102,23 @@ gameSettings = {
 <div id="configScreen">
 <h3>Custom Setting Options</h3>
 <p id="validate"></p>
-<form id="customSettings" oninput="getCustomSettings()">
-	X Location:<input id="xLoc" type=text size=4 value="0"><br>
-	Y Location:<input id="yLoc" type=text size=4 value="0"><br>
+<form id="customSettings" oninput="getCustomSettings(gameSettings)">
+	Map Size:<input id="mapSize" type=text size=4 value="25">x <output id="size" value="25"></output></input><br>
+	X Location:<input id="xLoc" type=text size=4 value="12"><br>
+	Y Location:<input id="yLoc" type=text size=4 value="12"><br>
 	Energy:<input id="energy" type=text size=4 value="100">%<br>
-	Supplies:<input id="supplies" type=text size=4 value="0"><br>
-	<!--Credits:<input id="credits" type=text size=4 value="0"><br> -->
-	Randomize Wormhole Behavior:<select id="randomizeWormhole" value ="0">
-				<option value="0">False</option>
-				<option value="1">True</option>
+	Supplies:<input id="supplies" type=text size=4 value="100"><br>
+	Credits:<input id="credits" type=text size=4 value="100"><br>
+	Randomize Wormhole Behavior:<select id="randomizeWormhole" value ="static">
+				<option value="static">False</option>
+				<option value="randomize">True</option>
 	</select><br>
-	Play Mode:<select id="playerDies" value ="0">
-				<option value="0">Regular Play</option>
-				<option value="1">Never Dies</option>
+	Play Mode:<select id="playerDies" value ="true">
+				<option value="true">Regular Play</option>
+				<option value="false">Never Dies</option>
 	</select><br>
-	Map Size:<input id="mapSize" type=text size=4 value="25"><br>
 	</form>
-	<button type=button onclick="loadCustomGame()"> Load Game </button>   
+	<button type=button onclick="loadGame(gameSettings)"> Load Game </button>   
 
 <p>
 Are you the game administrator?<input type="checkbox" id="administrator" name="administrator" checked onclick="hide_placement()">
@@ -170,6 +170,7 @@ Y <input type=text  id="yVal" size=4 >
 <p>
 <p>Energy <input type=text id="energyVal" size=4 >
 <p>Supplies <input type=text id="suppliesVal" size=4 >%
+<p>Credits <input type=text id="credits" size=4>
 <p>
 <hr>
 MAKE A MOVE
