--- a/SpaceHunt Core HTML.html
+++ b/SpaceHunt Core HTML.html
@@ -63,6 +63,9 @@ for(var i = 0; i < 128; ++i)
 	#configScreen {
 		display: none;
 	}
+	#name {
+		padding-top: 75px
+	}
 </style>
 <script>
 	
@@ -73,6 +76,8 @@ gameSettings = {
   regularPlay:"true", mapSize:"25"
 }
 
+var stack = [];
+
 </script>
 
 
@@ -81,19 +86,16 @@ gameSettings = {
 
 <body >
 <!--  Prompt for custom settings -->
-<div id="config">
-<form oninput="gameConfigOption(gameSettings)">
-<h2> Welcome to Space Hunt</h2>
-<p>Would you like to personalize your gaming experience?
-	<select id="gameConfigTF">
-				<option value=""></option>
-				<option value="true">True</option>
-				<option value="false">False</option>
-	</select>
+<div id="config" align="center">
+<form >
+<h1> Welcome to Space Hunt</h1>
+<p id="name"> Enter Name for User: 
+<input  id="gameConfigTF" type=text size=10 >
+<button type=button onclick="gameConfigOption(gameSettings)">Load Game</button> 
+
 </form>
 </div>
 <!-- End Prompt  -->
-
 
 
 
