--- a/SpaceHunt Core HTML.html
+++ b/SpaceHunt Core HTML.html
@@ -126,41 +126,79 @@
 			</select><br>
 		</form>
 
+<script>
+
+game_map = new Celestial_Map();
+
+
+</script>
 
 		<p>
-			<!--Are you the game administrator?<input type="checkbox" id="administrator" name="administrator" checked onclick="hide_placement()"> -->
 
 			<form id=place_pentium name=place_pentium>
 
-				Pentium 1:
-				X<input id="1_x_map" type=text size=4>
-				Y<input id="1_y_map" type=text size=4><br>
-				Pentium 2:
-				X<input id="2_x_map" type=text size=4>
-				Y<input id="2_y_map" type=text size=4><br>
-				Pentium 3:
-				X<input id="3_x_map" type=text size=4>
-				Y<input id="3_y_map" type=text size=4><br>
-				Pentium 4:
-				X<input id="4_x_map" type=text size=4>
-				Y<input id="4_y_map" type=text size=4><br>
-				Pentium 5:
-				X<input id="5_x_map" type=text size=4>
-				Y<input id="5_y_map" type=text size=4><br>
-				Pentium 6:
-				X<input id="6_x_map" type=text size=4>
-				Y<input id="6_y_map" type=text size=4><br>
-				Pentium 7:
-				X<input id="7_x_map" type=text size=4>
-				Y<input id="7_y_map" type=text size=4><br>
+				Celeron:
+				X<input id="1_x_map" type="text" size=4>
+				Y<input id="1_y_map" type="text" size=4><br>
+				Xeon:
+				X<input id="2_x_map" type="text" size=4>
+				Y<input id="2_y_map" type="text" size=4><br>
+				Ryzen:
+				X<input id="3_x_map" type="text" size=4>
+				Y<input id="3_y_map" type="text" size=4><br>
+				Saturn:
+				X<input id="4_x_map" type="text" size=4>
+				Y<input id="4_y_map" type="text" size=4><br>
+				Mars:
+				X<input id="5_x_map" type="text" size=4>
+				Y<input id="5_y_map" type="text" size=4><br>
+				Jupiter:
+				X<input id="6_x_map" type="text" size=4>
+				Y<input id="6_y_map" type="text" size=4><br>
+				Pluto:
+				X<input id="7_x_map" type="text" size=4>
+				Y<input id="7_y_map" type="text" size=4><br>
 				<br>
 
-
 			</form>
-			<button type=button onclick="loadGame(gameSettings); return place()"> Load Game </button>
+	
+			<select id="asteroids" name="asteroids" onchange="hide_asteroid()">
+				<option value=True>Enable Asteroids</option>
+				<option value=False>Disable Asteroids</option>
+			</select>
+	
+			<form id="place_asteroids" name="place_asteroids">
+				Asteroid 1:
+				X<input type="text" id="asteroid_1x" size=4>
+				X<input type="text" id="asteroid_1y" size=4><br>
+				Asteroid 2:
+				X<input type="text" id="asteroid_2x" size=4>
+				X<input type="text" id="asteroid_2y" size=4><br>
+				Asteroid 2:
+				X<input type="text" id="asteroid_3x" size=4>
+				X<input type="text" id="asteroid_3y" size=4><br>
+			</form>
+			
+			<select id="space_stations" name="space_stations" onchange="hide_space_station()">
+				<option value=True>Enable Space Stations</option>
+				<option value=False>Disable Space Stations</option>
+			</select>
+	
+			<form id="place_space_stations" name="place_space_station">
+				Space Station 1:
+				X<input type="text" id="space_station_1x" size=4>
+				Y<input type="text" id="space_station_1y" size=4><br>
+				Space Station 2:
+				X<input type="text" id="space_station_2x" size=4>
+				Y<input type="text" id="space_station_2y" size=4><br>
+				Space Station 3:
+				X<input type="text" id="space_station_3x" size=4>
+				Y<input type="text" id="space_station_3y" size=4><br>
+			</form>
+	
+			<button type=button onclick="loadGame(gameSettings); artifacts_configure(game_map)"> Load Game </button>
 	</div>
 	<!-- End of custom settings option  -->
-
 
 
 	<!-- end game config -->
@@ -207,6 +245,7 @@
 			</p>
 
 		</form>
+		
 	</div>
 
 
