Update SpaceHunt Core HTML.html

--- a/SpaceHunt Core HTML.html
+++ b/SpaceHunt Core HTML.html
@@ -230,6 +230,9 @@ game_map = new Celestial_Map();
 				<textarea id="HtmlMap" onload="c_map.display_map()"> <!--- Needs a loading screen configuration? -->
 
 				</textarea>
+				<script>
+					window.onload=c_map.display_map()
+				</script>
 			</p>
 			<hr>
 
