moving map size to js file

--- a/SpaceHunt Core HTML.html
+++ b/SpaceHunt Core HTML.html
@@ -227,7 +227,7 @@ game_map = new Celestial_Map();
 			<hr>
 			<h3> CURRENT MAP </h3>
 			<p>
-				<textarea id="HtmlMap" rows="6" cols="50" onload="c_map.display_map()"> <!--- Needs a loading screen configuration? -->
+				<textarea id="HtmlMap" onload="c_map.display_map()"> <!--- Needs a loading screen configuration? -->
 
 				</textarea>
 				<script>
