Update SpaceHunt Core HTML.html

--- a/SpaceHunt Core HTML.html
+++ b/SpaceHunt Core HTML.html
@@ -229,11 +229,11 @@ game_map = new Celestial_Map();
 			<hr>
 			<h3> CURRENT MAP </h3>
 			<p>
-				<textarea id="HtmlMap" onload="c_map.display_map()"> <!--- Needs a loading screen configuration? -->
+				<textarea id="HtmlMap" onload="game_map.display_map()"> <!--- Needs a loading screen configuration? -->
 
 				</textarea>
 				<script>
-					window.onload=c_map.display_map()
+					window.onload=game_map.display_map()
 				</script>
 			</p>
 			<hr>
