Changed default size for map.

--- a/SpaceHunt Core HTML.html
+++ b/SpaceHunt Core HTML.html
@@ -210,7 +210,7 @@
 			<h3> CURRENT MAP </h3>
 			<p>
 				<!--- Needs a loading screen configuration? -->
-				<textarea  readonly id="HtmlMap" style="font-family:'Courier New', Courier, monospace; height: auto;"
+				<textarea readonly id="HtmlMap" style="font-family:'Courier New', Courier, monospace; height: 400px;"
 					onload="game_map.display_map()">
 
 				</textarea>
