--- a/SpaceHunt Core HTML.html
+++ b/SpaceHunt Core HTML.html
@@ -85,7 +85,7 @@
 	<div id="config" align="center">
 		<form>
 			<h1> Welcome to Space Hunt</h1>
-			<p id="name"> Enter Name for User:
+			<p id="name"> Enter Name:
 				<input id="gameConfigTF" type=text size=10>
 				<button type=button onclick="gameConfigOption(gameSettings)">Load Game</button>
 
@@ -217,6 +217,7 @@
 				<script>
 					window.onload = game_map.display_map()
 				</script>
+				<textarea readonly id="messageLog" rows="25" cols="35" ></textarea>
 
 			</p>
 			<hr>
