added logMessage function

--- a/SpaceHunt Core HTML.html
+++ b/SpaceHunt Core HTML.html
@@ -40,9 +40,11 @@
 	<script src="Space_Station_Docking.js"> </script>
 
 
-
-	<!--  Ramo's Code -->
+<script src="utility_functions.js"></script>
+	<!--  User Story SH-2 -->
 	<script src="game_config.js"></script>
+	
+	
 	<style>
 		#game {
 			display: none;
