Added asteroid damage

--- a/SpaceHunt Core HTML.html
+++ b/SpaceHunt Core HTML.html
@@ -166,13 +166,16 @@
 			<form id="place_asteroids" name="place_asteroids">
 				Asteroid 1:
 				X<input type="text" id="asteroid_1x" size=4>
-				X<input type="text" id="asteroid_1y" size=4><br>
+				Y<input type="text" id="asteroid_1y" size=4>
+				Damage: <input type="text" id="damage_1" size=4><br>	
 				Asteroid 2:
 				X<input type="text" id="asteroid_2x" size=4>
-				X<input type="text" id="asteroid_2y" size=4><br>
+				Y<input type="text" id="asteroid_2y" size=4>
+				Damage: <input type="text" id="damage_2" size=4><br>	
 				Asteroid 2:
 				X<input type="text" id="asteroid_3x" size=4>
-				X<input type="text" id="asteroid_3y" size=4><br>
+				Y<input type="text" id="asteroid_3y" size=4>
+				Damage: <input type="text" id="damage_3" size=4><br>	
 			</form>
 
 			<select id="space_stations" name="space_stations" onchange="hide_space_station()">
