Fixed collision bug

--- a/SpaceHunt Core HTML.html
+++ b/SpaceHunt Core HTML.html
@@ -92,6 +92,7 @@
 				<button type=button onclick="gameConfigOption(gameSettings)">Load Game</button>
 
 		</form>
+
 	</div>
 
 
@@ -246,10 +247,10 @@
 				Distance <input type=text name=distance size=4>
 			</p>
 			<p>
-				<input type=button value="0" onclick=moveSpacecraft(0,distance)>
-				<input type=button value="90" onclick=moveSpacecraft(90,distance)>
-				<input type=button value="180" onclick=moveSpacecraft(180,distance)>
-				<input type=button value="270" onclick=moveSpacecraft(270,distance)>
+				<input type=button value="0 (Right)" onclick=moveSpacecraft(0,distance)>
+				<input type=button value="90 (Up)" onclick=moveSpacecraft(90,distance)>
+				<input type=button value="180 (Left)" onclick=moveSpacecraft(180,distance)>
+				<input type=button value="270 (Down)" onclick=moveSpacecraft(270,distance)>
 			</p>
 
 			<p>
