fixed map printin bug

--- a/SpaceHunt Core HTML.html
+++ b/SpaceHunt Core HTML.html
@@ -230,13 +230,8 @@
 			<h3> CURRENT MAP </h3>
 			<p>
 				<!--- Needs a loading screen configuration? -->
-				<textarea readonly id="HtmlMap"  style="font-family:'Courier New', Courier, monospace; height: 400px;"
-					onload="game_map.display_map()">
-
+				<textarea readonly id="HtmlMap"  style="font-family:'Courier New', Courier, monospace; height: 400px;">
 				</textarea>
-				<script>
-					window.onload = game_map.display_map()
-				</script>
 				<textarea readonly id="messageLog" rows="25" cols="35" ></textarea>
 
 			</p>
