Added and verified support for showing initial three planets when the game loads for user story Celestial Map.

--- a/SpaceHunt Core HTML.html
+++ b/SpaceHunt Core HTML.html
@@ -210,8 +210,8 @@
 			<h3> STATUS </h3>
 			<p>
 				Current Location:
-				(<output  type=text id="xVal" size=4></output>,
-				<output  type=text id="yVal" size=4></output>)<br>
+				(<output  type=text id="yVal" size=4></output>,
+				<output  type=text id="xVal" size=4></output>)<br>
 			</p>
 			<p>
 				Energy: <output  type=text id="energyVal" size=4></output>
