--- a/SpaceHunt Core HTML.html
+++ b/SpaceHunt Core HTML.html
@@ -180,6 +180,8 @@
 				X<input type="text" id="asteroid_3x" size=4>
 				Y<input type="text" id="asteroid_3y" size=4>
 				Damage: <input type="text" id="damage_3" size=4><br>	
+				<p>	
+				(Set damage to 100 for automatic death)	
 			</form>
 
 			<select id="space_stations" name="space_stations" onchange="hide_space_station()">
