removing sams aseroid collision calls

--- a/SpaceHunt Core HTML.html
+++ b/SpaceHunt Core HTML.html
@@ -199,7 +199,7 @@
 				Y<input type="text" id="space_station_3y" size=4><br>
 			</form>
 
-			<button type=button onclick="loadGame(gameSettings); artifacts_configure(game_map);Docking_Station.load_locations(); Collision.load_asteroids();"> Load Game </button>
+			<button type=button onclick="loadGame(gameSettings); artifacts_configure(game_map);Docking_Station.load_locations();"> Load Game </button>
 	</div>
 	<!-- End of custom settings option  -->
 
